--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "密碼確認";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    請至信箱檢查郵件，以重設密碼。
 </p>
 
