--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model LoginWith2faModel
 @{
-    ViewData["Title"] = "Two-factor authentication";
+    ViewData["Title"] = "二階段驗證";
 }
 
 <h1>@ViewData["Title"]</h1>
 <hr />
-<p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
+<p>您的登入已受二階段驗證app保護，請於下方輸入二階段驗證碼。</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
@@ -32,8 +32,8 @@
     </div>
 </div>
 <p>
-    Don't have access to your authenticator device? You can
-    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
+    無法使用二階段驗證？您可以
+    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">使用備用碼進行登入</a>。
 </p>
 
 @section Scripts {
