--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = "會員資料管理";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
@@ -63,7 +63,7 @@
                 <label asp-for="Input.MotherName"></label>
                 <input asp-for="Input.MotherName" class="form-control" />
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-primary">儲存</button>
         </form>
     </div>
 </div>
