--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm email change";
+    ViewData["Title"] = "郵件地址變更確認";
 }
 
 <h1>@ViewData["Title"]</h1>
