--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "外部登入";
 }
 
 <h1>@ViewData["Title"]</h1>
