--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Login.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "登入";
 }
 
 <div class="container">
@@ -12,7 +12,7 @@
             <section class="spad">
                 <form id="account" method="post">
                     <h1>@ViewData["Title"]</h1>
-                    <h4>Use a local account to log in.</h4>
+                    <h4>請輸入帳號密碼</h4>
                     <hr />
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
@@ -38,13 +38,13 @@
                     </div>
                     <div class="form-group">
                         <p>
-                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                            <a id="forgot-password" asp-page="./ForgotPassword">忘記密碼？</a>
                         </p>
                         <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">註冊為新使用者</a>
                         </p>
                         <p>
-                            <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                            <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">重新寄送確認信</a>
                         </p>
                     </div>
                 </form>
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-6 col-md-offset-2">
             <section class="spad">
-                <h4>Use another service to log in.</h4>
+                <h4>使用第三方登入</h4>
                 <hr />
                 @{
                     if ((Model.ExternalLogins?.Count ?? 0) == 0)
