--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -1,14 +1,13 @@
 ﻿@page
 @model LoginWithRecoveryCodeModel
 @{
-    ViewData["Title"] = "Recovery code verification";
+    ViewData["Title"] = "備用碼驗證";
 }
 
 <h1>@ViewData["Title"]</h1>
 <hr />
 <p>
-    You have requested to log in with a recovery code. This login will not be remembered until you provide
-    an authenticator app code at log in or disable 2FA and log in again.
+    您將使用備用碼進行登入。直到您使用二階段驗證登入或取消二階段驗證前，此登入將不會被記住。
 </p>
 <div class="row">
     <div class="col-md-4">
@@ -19,7 +18,7 @@
                 <input asp-for="Input.RecoveryCode" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Input.RecoveryCode" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Log in</button>
+            <button type="submit" class="btn btn-primary">登入</button>
         </form>
     </div>
 </div>
