--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Disable2faModel
 @{
-    ViewData["Title"] = "Disable two-factor authentication (2FA)";
+    ViewData["Title"] = "取消二階段驗證(2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -10,16 +10,16 @@
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>This action only disables 2FA.</strong>
+        <strong>此動作僅會取消您的二階段驗證。</strong>
     </p>
     <p>
-        Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a asp-page="./ResetAuthenticator">reset your authenticator keys.</a>
+        取消二階段驗證並不會改變您二階段驗證APP使用的金鑰，如果您想改變二階段驗證金鑰，請您
+        <a asp-page="./ResetAuthenticator">重設二階段驗證金鑰</a>。
     </p>
 </div>
 
 <div>
     <form method="post" class="form-group">
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
+        <button class="btn btn-danger" type="submit">取消二階段驗證</button>
     </form>
 </div>
