--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DownloadPersonalDataModel
 @{
-    ViewData["Title"] = "Download Your Data";
+    ViewData["Title"] = "下載個人資料";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
