--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "密碼已重設";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    您的密碼已被重設，請點擊<a asp-page="./Login">此處</a>以進行登入。
 </p>
