新增QRCode掃描功能

--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -13,7 +13,7 @@
         <strong>此動作僅會取消您的二階段驗證。</strong>
     </p>
     <p>
-        取消二階段驗證並不會改變您二階段驗證APP使用的金鑰，如果您想改變二階段驗證金鑰，請您
+        取消二階段驗證並不會改變您驗證APP使用的金鑰，如果您想改變驗證金鑰，請您
         <a asp-page="./ResetAuthenticator">重設二階段驗證金鑰</a>。
     </p>
 </div>
