--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "個人資料";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,15 +9,15 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p>此頁面含有您提供給我們的個人資料，您能在此下載或刪除您的個人資料。</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>刪除資料將永久移除您的帳號，且無法被復原。</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-primary" type="submit">下載</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">刪除</a>
         </p>
     </div>
 </div>
