--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -9,10 +9,10 @@
 <h4>@ViewData["Title"]</h4>
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Put these codes in a safe place.</strong>
+        <strong>請妥善保管您的備用碼。</strong>
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        如果您遺失驗證裝置及備用碼，您將再無法登入帳號。
     </p>
 </div>
 <div class="row">
