--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model TwoFactorAuthenticationModel
 @{
-    ViewData["Title"] = "Two-factor authentication (2FA)";
+    ViewData["Title"] = "二階段驗證(2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -12,44 +12,44 @@
     if (Model.RecoveryCodesLeft == 0)
     {
         <div class="alert alert-danger">
-            <strong>You have no recovery codes left.</strong>
-            <p>You must <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+            <strong>您已無任何備用碼。</strong>
+            <p>在您使用備用碼登入以前，您必須<a asp-page="./GenerateRecoveryCodes">產生新的備用碼</a>。</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft == 1)
     {
         <div class="alert alert-danger">
-            <strong>You have 1 recovery code left.</strong>
-            <p>You can <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong>您剩餘一組備用碼。</strong>
+            <p>您可以<a asp-page="./GenerateRecoveryCodes">產生新的備用碼</a>。</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft <= 3)
     {
         <div class="alert alert-warning">
-            <strong>You have @Model.RecoveryCodesLeft recovery codes left.</strong>
-            <p>You should <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong>您尚餘 @Model.RecoveryCodesLeft 組備用碼</strong>
+            <p>您可以<a asp-page="./GenerateRecoveryCodes">產生新的備用碼</a>。</p>
         </div>
     }
 
     if (Model.IsMachineRemembered)
     {
         <form method="post" style="display: inline-block">
-            <button type="submit" class="btn btn-default">Forget this browser</button>
+            <button type="submit" class="btn btn-default">在此瀏覽器忘記我</button>
         </form>
     }
-    <a asp-page="./Disable2fa" class="btn btn-default">Disable 2FA</a>
-    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
+    <a asp-page="./Disable2fa" class="btn btn-default">取消二階段驗證(2FA)</a>
+    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">重設備用碼</a>
 }
 
-<h5>Authenticator app</h5>
+<h5>驗證App</h5>
 @if (!Model.HasAuthenticator)
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Add authenticator app</a>
+    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">加入二階段驗證App</a>
 }
 else
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Setup authenticator app</a>
-    <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Reset authenticator app</a>
+    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">設定二階段驗證App</a>
+    <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">重設二階段驗證App</a>
 }
 
 @section Scripts {
