--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Login.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,9 +16,9 @@
                     <hr />
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
-                        <label asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control" />
-                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        <label asp-for="Input.LoginInput"></label>
+                        <input asp-for="Input.LoginInput" class="form-control" />
+                        <span asp-validation-for="Input.LoginInput" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Input.Password"></label>
