--- a/prjCramSchoolSystem/Views/Shared/_Layout.cshtml
+++ b/prjCramSchoolSystem/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="~/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/style.css" type="text/css">
+    @await RenderSectionAsync("Styles", required: false)
+
 </head>
 
 <body>
