新增管理身分組功能

--- a/prjCramSchoolSystem/Views/Shared/_Layout.cshtml
+++ b/prjCramSchoolSystem/Views/Shared/_Layout.cshtml
@@ -95,6 +95,8 @@
                             <li class="text-nowrap"><a asp-area="" asp-controller="Home" asp-action="Index">首頁</a></li>
                             <li class="text-nowrap"><a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
                             <li class="text-nowrap"><a asp-area="" asp-controller="Home" asp-action="Index">課程購買</a></li>
+                            <li class="text-nowrap"><a asp-area="" asp-controller="RoleManager" asp-action="Index">身分新增及刪除</a></li>
+
                             <li>
                                 <a href="#" class="text-nowrap">頁面</a>
                                 <ul class="dropdown">
