--- a/prjCramSchoolSystem/Views/Home/Index.cshtml
+++ b/prjCramSchoolSystem/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "首頁";
 }
 
 <!-- Instagram Section Begin -->
@@ -9,42 +9,42 @@
             <div class="col-lg-4 p-0">
                 <div class="instagram__text">
                     <div class="section-title">
-                        <span>Follow us on instagram</span>
-                        <h2>Sweet moments are saved as memories.</h2>
+                        <span>夢想的起點</span>
+                        <h2>如果能看得比別人遠，<br />那是因為站在巨人的肩上。</h2>
                     </div>
-                    <h5><i class="fa fa-instagram"></i> @@sweetcake</h5>
+                    <h5><i class="fa fa-instagram"></i> @@EddenCramSchool</h5>
                 </div>
             </div>
             <div class="col-lg-8">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-6">
                         <div class="instagram__pic">
-                            <img src="img/instagram/instagram-1.jpg" alt="">
+                            <img src="img/HomePageImg/images.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-6">
                         <div class="instagram__pic middle__pic">
-                            <img src="img/instagram/instagram-2.jpg" alt="">
+                            <img src="img/HomePageImg/專注力.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-6">
                         <div class="instagram__pic">
-                            <img src="img/instagram/instagram-3.jpg" alt="">
+                            <img src="img/HomePageImg/328.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-6">
                         <div class="instagram__pic">
-                            <img src="img/instagram/instagram-4.jpg" alt="">
+                            <img src="img/HomePageImg/p38.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-6">
                         <div class="instagram__pic middle__pic">
-                            <img src="img/instagram/instagram-5.jpg" alt="">
+                            <img src="img/HomePageImg/images.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-6">
                         <div class="instagram__pic">
-                            <img src="img/instagram/instagram-3.jpg" alt="">
+                            <img src="img/HomePageImg/0825-1.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
 </section>
 <!-- Instagram Section End -->
 
-<div class="text-center">
+@*<div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+</div>*@
