--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using prjCramSchoolSystem.Enums
 @model IndexModel
 @{
     ViewData["Title"] = "會員資料管理";
@@ -16,7 +17,7 @@
                 <div class="centered">
                     <img class="img-thumbnail" id="thumbnailImg" src="@Url.Content(Model.FolderPath)@Model.ThumbnailPath" alt="無此圖片" height=300 />
                     <input class="form-control" type="file" id="thumbnail" name="thumbnail" accept="image/*">
-                </div>          
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Username"></label>
@@ -39,30 +40,40 @@
                 <label asp-for="Input.Gender"></label>
                 <input asp-for="Input.Gender" class="form-control" />
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Grade"></label>
-                <input asp-for="Input.Grade" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.BirthDate"></label>
-                <input asp-for="Input.BirthDate" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Address"></label>
-                <input asp-for="Input.Address" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Enrollment"></label>
-                <input asp-for="Input.Enrollment" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.FatherName"></label>
-                <input asp-for="Input.FatherName" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.MotherName"></label>
-                <input asp-for="Input.MotherName" class="form-control" />
-            </div>
+            @{
+                if (Model.User.IsInRole(Roles.Default.ToString()))
+                {
+                    <div class="form-group">
+                        <label asp-for="Input.Grade"></label>
+                        <input asp-for="Input.Grade" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.BirthDate"></label>
+                        <input asp-for="Input.BirthDate" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Address"></label>
+                        <input asp-for="Input.Address" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Enrollment"></label>
+                        <input asp-for="Input.Enrollment" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.FatherName"></label>
+                        <input asp-for="Input.FatherName" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.MotherName"></label>
+                        <input asp-for="Input.MotherName" class="form-control" />
+                    </div>
+                    if (Model.User.IsInRole(Roles.Parent.ToString()))
+                {
+
+                }
+
+                    }
+            }
             <button id="update-profile-button" type="submit" class="btn btn-primary">儲存</button>
         </form>
     </div>
