--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ParentRegister.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ParentRegister.cshtml
@@ -8,17 +8,10 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h4>建立新帳號</h4>
-        <hr />
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
+            <h4>建立新帳號</h4>
+            <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.UserRole"></label>
-                <select class="form-control" asp-for="Input.UserRole" asp-items="@Model.UserRoles">
-                </select>
-            </div>
-                <span asp-validation-for="Input.UserRole" class="text-danger"></span>
-            
             <div class="form-group">
                 <label asp-for="Input.Username"></label>
                 <input asp-for="Input.Username" class="form-control" />
@@ -61,7 +54,17 @@
                 <input asp-for="Input.Gender" class="form-control" />
                 <span asp-validation-for="Input.Gender" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <div class="form-group">
+                <label asp-for="Input.BirthDate"></label>
+                <input asp-for="Input.BirthDate" class="form-control" />
+                <span asp-validation-for="Input.BirthDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Address"></label>
+                <input asp-for="Input.Address" class="form-control" />
+                <span asp-validation-for="Input.Address" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">註冊</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
