--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Register.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Register.cshtml
@@ -14,8 +14,10 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.UserRole"></label>
-                <select class="form-control" asp-for="Input.UserRole" asp-items="@Model.UserRoles">
-                </select>
+                <div class="shop__option">
+                    <select class="form-control" asp-for="Input.UserRole" asp-items="@Model.UserRoles">
+                    </select>
+                </div>
             </div>
                 <span asp-validation-for="Input.UserRole" class="text-danger"></span>
             
