完成綁定父母UserId至FatherId、MotherId欄位功能

--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Login.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Login.cshtml
@@ -41,7 +41,7 @@
                             <a id="forgot-password" asp-page="./ForgotPassword">忘記密碼？</a>
                         </p>
                         <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">學生註冊</a>
+                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">家長及學生註冊</a>
                         </p>
                         <p>
                             <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">重新寄送確認信</a>
