--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -16,8 +16,13 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="breadcrumb__text">
                     <h2>會員中心</h2>
-                    <br>
                     <h5>檢視及修改您的個人資料</h5>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="breadcrumb__links">
+                    <a asp-area="" asp-controller="Home" asp-action="Index">首頁</a>
+                    <span>@ViewData["Title"]</span>
                 </div>
             </div>
         </div>
