--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
 @model EmailModel
 @{
-    ViewData["Title"] = "管理電子郵件地址";
+    ViewData["Title"] = "更改電子郵件地址";
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8">
         <form id="email-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -35,6 +35,9 @@
             </div>
             <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="btn btn-primary">更改電子郵件</button>
         </form>
+    </div>
+    <div class="col-md-4">
+
     </div>
 </div>
 
