--- a/prjCramSchoolSystem/Views/RoleManager/Index.cshtml
+++ b/prjCramSchoolSystem/Views/RoleManager/Index.cshtml
@@ -10,7 +10,7 @@
                 <div class="input-group">
                     <input name="roleName" class="form-control w-25">
                     <span class="input-group-btn">
-                        <button class="btn btn-info">Add New Role</button>
+                        <button class="btn btn-info">加入新身分組</button>
                     </span>
                 </div>
             </form>
@@ -18,8 +18,8 @@
                 <thead>
                     <tr>
                         <th>Id</th>
-                        <th>Role</th>
-                        <th>Delete</th>
+                        <th>身分</th>
+                        <th>刪除身分</th>
                     </tr>
                 </thead>
                 <tbody>
