--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ShowRecoveryCodesModel
 @{
-    ViewData["Title"] = "Recovery codes";
+    ViewData["Title"] = "備用碼";
     ViewData["ActivePage"] = "TwoFactorAuthentication";
 }
 
