--- a/prjCramSchoolSystem/wwwroot/css/style.css
+++ b/prjCramSchoolSystem/wwwroot/css/style.css
@@ -154,7 +154,13 @@ ol {
         color: #fff;
         background-color: rgb(0 0 119 / 73%);
     }
-
+.input__model .nice-select {
+    width: 100%;
+    border-color: rgb(206, 212, 218);
+}
+.input__model .nice-select span {
+    display: block;
+}
 .text-white h1,
 .text-white h2,
 .text-white h3,
