--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -20,6 +20,9 @@
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">刪除</a>
         </p>
     </div>
+    <div class="col-md-6">
+
+    </div>
 </div>
 
 @section Scripts {
