--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -15,7 +15,7 @@
 </p>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -25,6 +25,8 @@
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
+    </div>
+    <div class="col-md-6">
     </div>
 </div>
 
