--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,22 +4,49 @@
     ViewData["Title"] = "忘記密碼?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>輸入您的Email</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<!-- Breadcrumb Begin -->
+<div class="breadcrumb-option">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="breadcrumb__text">
+                    <h2>@ViewData["Title"]</h2>
+                    <h5>輸入您的Email</h5>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">送出</button>
-        </form>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="breadcrumb__links">
+                    <a asp-area="" asp-controller="Home" asp-action="Index">首頁</a>
+                    <span>@ViewData["Title"]</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<!-- Breadcrumb End -->
+<!--原生頁面-->
+<!-- About Section Begin -->
+<hr />
+<section class="manage">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">送出</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
