--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -27,6 +27,9 @@
             <button type="submit" class="btn btn-primary">設定密碼</button>
         </form>
     </div>
+    <div class="col-md-6">
+
+    </div>
 </div>
 
 @section Scripts {
