--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -19,6 +19,8 @@
             <button type="submit" class="btn btn-primary">重新寄送</button>
         </form>
     </div>
+    <div class="col-md-8">
+    </div>
 </div>
 
 @section Scripts {
