--- a/prjCramSchoolSystem/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/prjCramSchoolSystem/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -8,7 +8,7 @@
 <h4>重新設定您的密碼</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Input.Code" type="hidden" />
@@ -29,6 +29,8 @@
             </div>
             <button type="submit" class="btn btn-primary">重新設定</button>
         </form>
+    </div>
+    <div class="col-md-6">
     </div>
 </div>
 
